<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom|center"
    tools:context=".Activities.MainActivity">

    <fragment
        android:id="@+id/polygonPlotMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:context=".Activities.MainActivity" />

    <LinearLayout
        android:id="@+id/layoutReset"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edinput_Serarch"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_weight="1.4"
            android:layout_marginStart="5dp"
            android:background="@drawable/bg_search"
            android:fontFamily="@font/source_sans_pro_italic"
            android:hint="@string/Search_data"
            android:paddingStart="10dp"
            android:paddingRight="5dp"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/common_google_signin_btn_text_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btSearch"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_weight="0.6"
            android:background="@drawable/bg_btsearch"
            android:fontFamily="@font/source_sans_pro"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/search_label"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium.Inverse"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_ResetMap"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@drawable/bg_reset"
        android:fontFamily="@font/source_sans_pro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_Detail"
        android:layout_marginBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginLeft="8dp"
        android:text="@string/reset_label"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium.Inverse"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/bt_undo"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@drawable/bg_reset"
        android:fontFamily="@font/source_sans_pro"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="@id/bt_ResetMap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_ResetMap"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/undo_label"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium.Inverse"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/bt_Detail"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_btdetail"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/detail_page"
        android:layout_marginStart="5dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium.Inverse"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_ResetMap"
        app:layout_constraintHorizontal_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>